// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table with one cell and style runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 1
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
  ],
  "props": Object {
    "style": Object {
      "borderCollapse": "collapse",
    },
  },
  "type": "table",
}
`;

exports[`Table with one column runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 1
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 2
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 3
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
  ],
  "props": Object {
    "style": Object {
      "borderCollapse": "collapse",
    },
  },
  "type": "table",
}
`;

exports[`Table with one row runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 1
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 2
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Item 3
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
  ],
  "props": Object {
    "style": Object {
      "borderCollapse": "collapse",
    },
  },
  "type": "table",
}
`;

exports[`Table with two columns and two rows runs correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Northwest Cell
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Northeast Cell
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Northeast Cell
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Southeast Cell
",
                  ],
                  "props": Object {
                    "style": Object {
                      "fontSize": "12px",
                    },
                  },
                  "type": "span",
                },
              ],
              "props": Object {},
              "type": "p",
            },
          ],
          "props": Object {
            "colspan": "1",
            "rowspan": "1",
            "style": Object {
              "borderCollapse": "collapse",
            },
          },
          "type": "td",
        },
      ],
      "props": Object {},
      "type": "tr",
    },
  ],
  "props": Object {
    "style": Object {
      "borderCollapse": "collapse",
    },
  },
  "type": "table",
}
`;
